--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-<!---css--->
+<!---style.css--->
 /* Existing styles */
 * { box-sizing: border-box; margin: 0; padding: 0; }
 body {
@@ -185,3 +185,4 @@ body.dark-mode form button:hover {
     font-size: 16px;
   }
 }
+
